<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#D042D1ED"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00BCD4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_"
                android:textColor="#050505" />

            <TextView
                android:id="@+id/dog_name"
                android:layout_width="172dp"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                android:textColor="#050505" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00BCD4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age_"
                android:textColor="#090909" />

            <TextView
                android:id="@+id/age"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="#131313" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00BCD4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/breed_"
                android:textColor="#090909" />

            <TextView
                android:id="@+id/breed"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="#0E0E0E" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00BCD4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dates"
                android:textColor="#101010" />

            <TextView
                android:id="@+id/date"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="#0B0A0A" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00BCD4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feature"
                android:textColor="#121212" />

            <TextView
                android:id="@+id/features"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="#101010" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>