<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paw">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="476dp"
        android:layout_height="317dp"
        app:layout_constraintBottom_toTopOf="@+id/nameOrph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/original" />

    <TextView
        android:id="@+id/nameOrph"
        android:layout_width="409dp"
        android:layout_height="61dp"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="85dp"
        android:background="#B6FFFFFF"
        android:fontFamily="serif"
        android:lineSpacingExtra="30sp"
        android:text="@string/orhName"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="388dp"
        android:layout_height="68dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#B6FFFFFF"
        android:lineSpacingExtra="8sp"
        android:text="@string/address"
        android:textAlignment="center"
        android:textColor="#0B0B0B"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOrph" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="399dp"
        android:layout_height="220dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="54dp"
        android:background="#B6FFFFFF"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOrph" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="78dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_pets_black_24dp" />

</android.support.constraint.ConstraintLayout>